Fixed the Show Issues overflow bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -354,3 +354,7 @@ max-width: 80% !important;
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.posts-container {
+  max-width: 80%;
+}
